ubuntu-mate-artwork (15.10.4) wily; urgency=medium

  * New release. Closes (LP: #)
    + Add missing symlinks for icons required by Blueman 2.0.

 -- Martin Wimpress <code@flexion.org>  Tue, 22 Sep 2015 09:31:41 +0100

ubuntu-mate-artwork (15.10.3) wily; urgency=medium

  * New release. Closes (LP: #1493065)
    + Add Keep Calm themed backdrops contributed by Tim Apple.
    + Update GTK3 scrollbars to be always visible so they fit with
    the MATE desktop.

 -- Martin Wimpress <martin@nuc>  Mon, 07 Sep 2015 13:54:54 +0100

ubuntu-mate-artwork (15.10.2) wily; urgency=medium

  * New release. Closes (LP: #1490930)
    + Add Wily Werewolf themed backdrops contributed by Ghost
    Sixtyseven.

 -- Martin Wimpress <code@flexion.org>  Tue, 01 Sep 2015 11:38:23 +0100

ubuntu-mate-artwork (15.10.1) wily; urgency=medium

  [ Martin Wimpress]
  * New release. Closes (LP: #1486932)
    + Integrate relevant updates from ubuntu-themes
    14.04+15.10.20150813-0ubuntu1.
  * debian/changelog:
    + Bump version to track Ubuntu release cycle.

  [ Lars Uebernickel ]
  * Clean up nautilus theming. Mostly, this consists of moving from
    nautilus-specific widgets and classes to more generic gtk ones. (LP:
    #1463848)
  * Theme GTK overlay-scrollbars to be more ubuntu-ish

 -- Martin Wimpress <code@flexion.org>  Wed, 19 Aug 2015 23:05:32 +0100

ubuntu-mate-artwork (0.4.12) wily; urgency=medium

  * debian/control:
    + Add missing entry for ubuntu-mate-wallpapers-common.
  * Closes (LP: #1479352)

 -- Martin Wimpress <code@flexion.org>  Wed, 29 Jul 2015 11:40:23 +0100

ubuntu-mate-artwork (0.4.11) wily; urgency=medium

  * Add community contributed wallpapers from David Chadderton.
  * Add community contributed wallpaper from quidsup.
  * Update Plymouth boot animation.
  * Update lib/plymouth/themes/ubuntu-mate-logo/ubuntu--mate-logo.script
  to support fsckd systemd service protocol.
  * debian/control: Correctly mark ubuntu-mate-wallpapers-complete as a
  metapackage.