@@ -40,6 +40,7 @@
 /*@define-color backdrop_dark_bg_color mix (@dark_bg_color, @dark_fg_color, 0.75);*/
 @define-color backdrop_selected_bg_color shade (@bg_color, 0.92);
 @define-color backdrop_selected_fg_color @fg_color;
+@define-color backdrop_filling_bg #b0b0b0;
 
 @define-color focus_color alpha (@selected_bg_color, 0.5);
 @define-color focus_bg_color alpha (@selected_bg_color, 0.1);
@@ -49,6 +50,8 @@
 @define-color osd_fg_color #eeeeec;
 @define-color osd_bg_color alpha(#202526, 0.7);
 @define-color osd_border_color alpha(black, 0.7);
+
+@define-color scrollbar_track_color mix(@base_color, black, 0.1); /* #e6e6e6 */
 
 @import url("gtk-widgets-borders.css");
 @import url("gtk-widgets-assets.css");
@@ -62,4 +65,5 @@
 @import url("apps/gnome-system-log.css");
 @import url("apps/unity-greeter.css");
 @import url("apps/glade.css");
+@import url("apps/software-center.css");
 @import url("public-colors.css");
