@@ -1,7 +1,9 @@
 /* gnome-terminal */
+@define-color terminal_bg #19230D;
+
 TerminalScreen {
     -TerminalScreen-background-darkness: 0.95;
-    background-color: #19230D;
+    background-color: @terminal_bg;
     color: #DFDBD2;
 }
 
