@@ -1,0 +1,3 @@
+.action-bar {
+    background-color: @bg_color;
+}
